--- a/.env-sample
+++ b/.env-sample
@@ -6,5 +6,15 @@ PUID=1004
 PGID=1001
 QBT_WEBUI_PORT=20000
 NETWORK_SUBNET=YOUR_NETWORK_SUBNET
-SHADOWSOCKS_PASSWORD=YOUR_SHADOWSOCKS_PASSWORD
 BASE_DIR=YOUR_MEDIA_DIRECTORY
+
+# MariaDb
+DB_MYSQL_HOST=MYSQL_HOST_NAME
+DB_ROOT_PWD=MYSQL_ROOT_PWD
+DB_USERNAME=MYSQL_USERNAME
+DB_NAME=DB_NAME
+DB_MYSQL_PWD=DB_MYSQL_PWD
+
+# Nginx Proxy Manager (Default user)
+# Email:    admin@example.com
+# Password: changeme
